# cs526_cp1

./: CMakeLists.txt  README.md
pass/: CMakeLists.txt  ScalarReplAggregates-kunli3.cpp
tests/: Makefile  nested.c  student.c  test.py  trivial.c
